# modbus-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  MIGRATION_GUIDE.md  README.md  RELEASE.md  pytest.ini
integration_tests/: Cargo.toml  README.md
integration_tests/src/: async_serial_tests.rs  async_server_tests.rs  async_tests.rs  lib.rs  mock_app.rs  serial_tests.rs  server_over_std_transport_tests.rs  server_tests.rs  tcp_tests.rs
mbus-async/: Cargo.toml  README.md
mbus-async/examples/: async_server_tcp.rs
mbus-async/src/: lib.rs
mbus-async/src/client/: client_core.rs  command.rs  decode.rs  encode.rs  mod.rs  network_client.rs  notifier.rs  response.rs  serial_client.rs  task.rs
mbus-async/src/runtime/: client_core.rs  mod.rs  network_client.rs  serial_client.rs
mbus-async/src/server/: app_handler.rs  mod.rs  serial_server.rs  session.rs  statistics.rs  tcp_server.rs
mbus-client/: Cargo.toml  README.md
mbus-client-async/: Cargo.toml  README.md
mbus-client-async/examples/: quick_async_client.rs
mbus-client-async/src/: lib.rs
mbus-client/src/: lib.rs
mbus-client/src/app/: app_trait.rs  mod.rs
mbus-client/src/services/: log_compat.rs  mod.rs
mbus-codegen/: Cargo.toml  README.md
mbus-codegen/src/: lib.rs
mbus-core/: Cargo.toml  README.md
mbus-core/src/: lib.rs
mbus-core/src/app/: app_trait.rs  mod.rs
mbus-core/src/client/: mod.rs
mbus-core/src/data_unit/: common.rs  mod.rs  tcp.rs
mbus-core/src/device_identification/: mod.rs
mbus-core/src/errors/: mod.rs
mbus-core/src/function_codes/: mod.rs  public.rs  user_defined.rs
mbus-core/src/models/: mod.rs
mbus-core/src/transport/: async_transport.rs  checksum.rs  config.rs  error.rs  mod.rs  retry.rs  transport.rs  unit_id.rs
mbus-ffi/: Cargo.toml  PYPI_README.md  README.md  build.rs  cbindgen.toml  cbindgen_client.toml  cbindgen_dotnet.toml  cbindgen_gateway.toml  cbindgen_go.toml  cbindgen_server.toml  pyproject.toml
mbus-ffi/.cargo/: config.toml
mbus-ffi/dotnet/: .gitignore  ModbusRs.sln  ModbusRs.slnx  README.md
mbus-ffi/dotnet/ModbusRs/: FileRecordSubRequest.cs  ModbusException.cs  ModbusRequestHandler.cs  ModbusRs.csproj  ModbusSerialClient.cs  ModbusStatus.cs  ModbusTcpClient.cs  ModbusTcpServer.cs
mbus-ffi/dotnet/ModbusRs.Tests/: ModbusRs.Tests.csproj  ModbusServerFixture.cs  ModbusTcpClientRoundTripTests.cs  ModbusTcpClientTests.cs
mbus-ffi/examples/: network_smoke.html  serial_smoke.html
mbus-ffi/examples/c_client_demo/: CMakeLists.txt  README.md  demo.yaml  main.c
mbus-ffi/examples/c_gateway_demo/: main.c  (+3 more)
mbus-ffi/go/: README.md  doc.go  go.mod
mbus-ffi/include/: mbus_ffi.h  mbus_ffi_feature_gated.h
mbus-ffi/javascript/: .gitignore  .npmignore  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.wasm.json
mbus-ffi/nodejs/: .gitignore  .npmignore  README.md  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
mbus-ffi/python/: README.md
mbus-ffi/scripts/: run_wasm_browser_tests.sh
mbus-ffi/src/: lib.rs
mbus-ffi/tests/: c_gateway_api.rs  c_server_api.rs  dotnet_tcp_client.rs  wasm_e2e.rs  wasm_server_bindings.rs
mbus-ffi/wasm/: .gitignore  README.md  modbus-rs-wasm.d.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
mbus-gateway/: Cargo.toml  README.md
mbus-gateway/examples/: custom_transport.rs  gateway_custom_transport.rs  rtu_upstream_to_tcp.rs  tcp_to_rtu.rs  ws_to_multi_downstream.rs  ws_to_rtu.rs  ws_to_tcp.rs  ws_to_tcp_production.rs
mbus-gateway/src/: async_gateway.rs  dispatcher.rs  downstream.rs  event.rs  lib.rs  raw_gateway.rs  router.rs  serial_gateway.rs  services.rs  shutdown.rs  txn_map.rs  ws_gateway.rs
mbus-gateway/tests/: async_gateway_tests.rs  gateway_routing.rs  sync_gateway.rs  txn_map_tests.rs
mbus-macros/: Cargo.toml  README.md
mbus-macros/src/: lib.rs
mbus-macros/tests/: trybuild.rs
mbus-network/: Cargo.toml  README.md
mbus-network/src/: lib.rs
mbus-network/tests/: wasm_async_tests.rs
mbus-rtu/: Cargo.toml
mbus-serial/: Cargo.toml  README.md
mbus-serial/src/: lib.rs
mbus-server/: Cargo.toml  README.md
mbus-server-async/: Cargo.toml  README.md
mbus-server-async/examples/: macro_async_server.rs  quick_async_server.rs
mbus-server-async/src/: lib.rs
mbus-server/examples/: broadcast.rs  broadcast_writes.rs  device_id.rs  device_identification.rs  diagnostics.rs  discrete_inputs_model.rs  fifo.rs  fifo_queue.rs  file_record.rs  full_featured_server.rs  full_server.rs  read_discrete_inputs_request.rs  read_multiple_holding_registers_request.rs  read_write_multiple_registers.rs  read_write_registers.rs  write_hooks.rs
mbus-server/src/: lib.rs  statistics.rs
mbus-server/tests/: broadcast_writes_integration.rs  discrete_inputs_model_integration.rs  exception_handling_integration.rs  fc01_fc05_fc15_integration.rs  fc02_integration.rs  fc03_exception_responses.rs  fc03_validation_guards.rs  fc04_fc06_fc16_integration.rs  fc07_integration.rs  fc08_integration.rs  fc08_statistics_integration.rs  fc0b_fc0c_fc11_integration.rs  fc14_fc15_integration.rs  fc17_integration.rs  fc18_integration.rs  fc2b_integration.rs  forwarding_app_coil_delegation.rs  forwarding_app_delegation.rs  multi_map_fc03.rs  multi_map_segmented_routing.rs  resilience_integration.rs  server_services_forwarding_app_e2e.rs  unit_id_filtering.rs  write_hook_dispatch_integration.rs  write_hook_routing.rs
mbus-tcp/: Cargo.toml  README.md
mbus-tcp/src/: lib.rs
modbus-client/: Cargo.toml  README.md
modbus-client/src/: lib.rs
modbus-rs/: Cargo.toml  README.md
modbus-rs/examples/: README.md  ascii_serial_example.rs  async_serial_rtu_example.rs  async_tcp_example.rs  coils_example.rs  coils_serial_example.rs  device_id_example.rs  device_id_serial_example.rs  discrete_inputs_example.rs  discrete_inputs_serial_example.rs  feature_facades_showcase.rs  fifo_file_record_demo.rs  logging_example.rs  registers_example.rs  registers_serial_example.rs  serial_rtu_backoff_jitter_example.rs  tcp_backoff_jitter_example.rs  test_write_hooks_doc.rs
modbus-rs/src/: lib.rs
(+514 files in other folders)
