[workspace]
members = [
    "xtask",
    "mbus-core",
    "mbus-serial",
    "mbus-network",
    "mbus-macros",
    "modbus-rs",
    "integration_tests",
    "mbus-client",
    "mbus-async",
    "mbus-ffi",
    "mbus-server",
]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2024"
authors = ["Raghava Ch <ch.raghava44@gmail.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/Raghava-Ch/modbus-rs"
homepage = "https://github.com/Raghava-Ch"
readme = "README.md"
keywords = ["modbus", "embedded", "no-std", "device"]
categories = ["embedded", "no-std"]
description = "Modbus client stack for embedded and std environments with TCP, RTU, and ASCII transport support"

[workspace.dependencies]
# Shared dependencies across workspace
mbus-core   = { version = "0.5.0", path = "./mbus-core" }
mbus-serial = { version = "0.5.0", path = "./mbus-serial" }
mbus-network= { version = "0.5.0", path = "./mbus-network" }
mbus-client = { version = "0.5.0", path = "./mbus-client" }
mbus-async = { version = "0.5.0", path = "./mbus-async" }
mbus-ffi    = { version = "0.5.0", path = "./mbus-ffi" }
mbus-server = { version = "0.2.0", path = "./mbus-server" }
mbus-macros = { version = "0.2.0", path = "./mbus-macros" }

heapless = { version = "0.8.0" }
bitfields = { version = "1.0.0" }
log = { version = "0.4.29", default-features = false }

# Macro dependencies
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn = { version = "2.0", features = ["full", "extra-traits"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"