[workspace]
members = [
    "xtask",
    "mbus-codegen",
    "mbus-core",
    "mbus-serial",
    "mbus-network",
    "mbus-macros",
    "mbus-client-async",
    "mbus-server-async",
    "modbus-rs",
    "integration_tests",
    "mbus-client",
    "mbus-async",
    "mbus-ffi",
    "mbus-server",
]
resolver = "2"

[workspace.package]
version = "0.8.0"
edition = "2024"
authors = ["Raghava Ch <ch.raghava44@gmail.com>"]
license = "GPL-3.0-only"
# Commercial license available for proprietary use.
# Contact ch.raghava44@gmail.com to purchase a commercial license.
repository = "https://github.com/Raghava-Ch/modbus-rs"
homepage = "https://github.com/Raghava-Ch"
readme = "README.md"
keywords = ["modbus", "embedded", "no-std", "device"]
categories = ["embedded", "no-std"]
description = "Feature-gated Modbus client and server stack for embedded and std targets with TCP, RTU, ASCII, async, and optional C/WASM bindings"

[workspace.dependencies]
# Shared dependencies across workspace
mbus-codegen = { version = "0.8.0", path = "./mbus-codegen" }
mbus-core   = { version = "0.8.0", path = "./mbus-core" }
mbus-serial = { version = "0.8.0", path = "./mbus-serial" }
mbus-network= { version = "0.8.0", path = "./mbus-network" }
mbus-client = { version = "0.8.0", path = "./mbus-client" }
mbus-async = { version = "0.8.0", path = "./mbus-async" }
mbus-client-async = { version = "0.8.0", path = "./mbus-client-async" }
mbus-server-async = { version = "0.8.0", path = "./mbus-server-async" }
mbus-ffi    = { version = "0.8.0", path = "./mbus-ffi" }
mbus-server = { version = "0.8.0", path = "./mbus-server" }
mbus-macros = { version = "0.8.0", path = "./mbus-macros" }

heapless = { version = "0.8.0" }
bitfields = { version = "1.0.0" }
anyhow = { version = "1.0" }
log = { version = "0.4.29", default-features = false }

# Macro dependencies
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn = { version = "2.0", features = ["full", "extra-traits"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"