[package]
name = "integration_tests"
version = "0.5.0"
edition = "2021"
publish = false

[dependencies]
modbus-rs = { version = "0.5.0", path = "../modbus-rs", features = ["async", "serial-ascii"] }
mbus-core = { version = "0.5.0", path = "../mbus-core" }
mbus-server = { version = "0.2.0", path = "../mbus-server" }

heapless = "0.8.0"
anyhow = "1.0.86"
tokio = { version = "1", features = ["full"] }

[features]
default = ["coils", "holding-registers", "input-registers"]
coils = []
holding-registers = []
input-registers = []
traffic = ["modbus-rs/traffic"]

[dev-dependencies]