[package]
name = "mbus-async"
version = "0.5.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Async (Tokio) facade for the modbus-rs client stack"

[dependencies]
mbus-core = { workspace = true }
mbus-client = { workspace = true }
mbus-network = { workspace = true, optional = true }
mbus-serial = { workspace = true, optional = true }
tokio = { version = "1", features = ["sync"] }

[features]
default = ["tcp", "coils", "registers", "discrete-inputs", "fifo", "file-record", "diagnostics"]
full = ["default", "traffic"]
tcp = ["dep:mbus-network"]
serial-rtu = ["dep:mbus-serial"]
serial-ascii = ["dep:mbus-serial", "mbus-core/serial-ascii", "mbus-client/serial-ascii"]
coils = ["mbus-core/coils", "mbus-client/coils"]
registers = ["mbus-core/registers", "mbus-client/registers"]
discrete-inputs = ["mbus-core/discrete-inputs", "mbus-client/discrete-inputs"]
fifo = ["mbus-core/fifo", "mbus-client/fifo"]
file-record = ["mbus-core/file-record", "mbus-client/file-record"]
diagnostics = ["mbus-core/diagnostics", "mbus-client/diagnostics"]
traffic = ["mbus-client/traffic"]
