[package]
name = "mbus-async"
version = "0.7.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Async (Tokio) facade for the modbus-rs client stack"

[dependencies]
mbus-core = { workspace = true, features = ["async"] }
mbus-client = { workspace = true }
mbus-network = { workspace = true, optional = true }
mbus-serial = { workspace = true, optional = true }
heapless = { workspace = true }
tokio = { version = "1", features = ["sync", "macros", "rt", "time"] }
log = { workspace = true, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
mbus-server = { version = "0.7.0", path = "../mbus-server" }
anyhow = "1.0"

[features]
default = ["tcp", "coils", "registers", "discrete-inputs", "fifo", "file-record", "diagnostics"]
full = ["default", "traffic"]
tcp = ["dep:mbus-network", "mbus-network/async", "tokio/net", "tokio/rt"]
serial-rtu = ["dep:mbus-serial", "mbus-serial/async"]
serial-ascii = ["dep:mbus-serial", "mbus-core/serial-ascii", "mbus-client/serial-ascii", "mbus-serial/async"]
coils = ["mbus-core/coils", "mbus-client/coils"]
registers = ["mbus-core/registers", "mbus-client/registers"]
discrete-inputs = ["mbus-core/discrete-inputs", "mbus-client/discrete-inputs"]
fifo = ["mbus-core/fifo", "mbus-client/fifo"]
file-record = ["mbus-core/file-record", "mbus-client/file-record"]
diagnostics = ["mbus-core/diagnostics", "mbus-client/diagnostics"]
diagnostics-stats = ["diagnostics"]
logging = ["dep:log"]
traffic = ["mbus-client/traffic"]
server-tcp = ["dep:mbus-network", "mbus-network/async", "tokio/net", "tokio/rt"]
server-serial = ["dep:mbus-serial", "mbus-serial/async"]

[[example]]
name = "async_server_tcp"
required-features = ["server-tcp", "coils", "registers"]
