[package]
name = "mbus-client-async"
version = "0.11.0"
edition.workspace = true
authors.workspace = true
license-file = "LICENSE"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Role-focused async Modbus client facade re-exported from mbus-async"

[dependencies]
mbus-async = { version = "0.11.0", path = "../mbus-async", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = [
    "network-tcp",
    "coils",
    "registers",
    "discrete-inputs",
    "fifo",
    "file-record",
    "diagnostics",
]
full = ["default", "traffic"]
network-tcp = ["mbus-async/network-tcp"]
serial-rtu = ["mbus-async/serial-rtu"]
serial-ascii = ["mbus-async/serial-ascii"]
coils = ["mbus-async/coils"]
holding-registers = ["mbus-async/holding-registers"]
input-registers = ["mbus-async/input-registers"]
registers = ["holding-registers", "input-registers"]
discrete-inputs = ["mbus-async/discrete-inputs"]
fifo = ["mbus-async/fifo"]
file-record = ["mbus-async/file-record"]
diagnostics = ["mbus-async/diagnostics"]
logging = ["mbus-async/logging"]
traffic = ["mbus-async/traffic"]

[[example]]
name = "quick_async_client"
required-features = ["network-tcp", "coils"]
