[package]
name = "mbus-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file = "LICENSE"
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description.workspace = true

[dependencies]
heapless = { workspace = true }
bitfields = { workspace = true }

[features]
# By default, all Modbus client services are enabled.
# To reduce binary size or exclude unused functionality,
# disable default features and enable only the services you need.
default = [
    "coils",
    "registers",
    "discrete-inputs",
    "fifo",
    "file-record",
    "diagnostics",
]
coils = []
registers = []
discrete-inputs = []
fifo = []
file-record = []
diagnostics = []
