[package]
name = "mbus-core"
version = "0.8.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Modbus core functionalities to provide modbus-rs project"

[dependencies]
heapless = { workspace = true }

[features]
# By default, all Modbus client services are enabled.
# To reduce binary size or exclude unused functionality,
# disable default features and enable only the services you need.
default = [
    "serial-ascii",
    "coils",
    "registers",
    "discrete-inputs",
    "fifo",
    "file-record",
    "diagnostics",
]
serial-ascii = []
coils = []
registers = []
discrete-inputs = []
fifo = []
file-record = []
diagnostics = []
async = []
