[package]
name = "mbus-core"
version = "0.15.0"
edition.workspace = true
authors.workspace = true
license-file = "LICENSE"
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Protocol types, errors, function codes, and transport traits for the modbus-rs workspace"

[dependencies]
heapless = { workspace = true }
defmt = { workspace = true, optional = true }

[features]
# By default, all Modbus client services are enabled.
# To reduce binary size or exclude unused functionality,
# disable default features and enable only the services you need.
default = [
    "serial-ascii",
    "coils",
    "discrete-inputs",
    "holding-registers",
    "input-registers",
    "fifo",
    "file-record",
    "diagnostics",
]
serial-ascii = []
coils = []
holding-registers = []
input-registers = []
discrete-inputs = []
fifo = []
file-record = []
diagnostics = []
async = []
logging = ["dep:defmt"]
defmt-format = ["logging"]
error-trait = []
