[package]
name = "mbus-ffi"
version = "0.8.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Native C FFI and browser WASM bindings for modbus-rs client APIs, with optional generated server bindings"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[features]
default = []
## Enables all WASM bindings for browser transports (`mbus-network` + `mbus-serial`).
wasm = [
    "dep:wasm-bindgen",
    "dep:js-sys",
    "dep:wasm-bindgen-futures",
    "dep:gloo-timers",
    "mbus-network/wasm",
    "mbus-serial/wasm",
]
## Enables native C FFI bindings for the Modbus client stack.
c = []
## Enables native C FFI bindings for the Modbus server stack.
c-server = ["dep:mbus-server"]
## Enables native C FFI bindings for the Modbus gateway stack.
c-gateway = ["dep:mbus-gateway"]
## Enables traffic notification callbacks on the C server (mbus-server `traffic` feature).
server-traffic = ["c-server", "mbus-server/traffic"]
coils = ["mbus-client/coils"]
registers = ["mbus-client/registers"]
discrete-inputs = ["mbus-client/discrete-inputs"]
fifo = ["mbus-client/fifo"]
file-record = ["mbus-client/file-record"]
diagnostics = ["mbus-client/diagnostics"]
traffic = ["mbus-client/traffic", "mbus-server-async?/traffic", "mbus-client-async?/traffic"]
## Convenience alias — enables every Modbus client feature at once
full = [
    "coils",
    "registers",
    "discrete-inputs",
    "fifo",
    "file-record",
    "diagnostics",
    "traffic",
]
## Convenience alias — enables every Modbus server feature at once (c-server must still be enabled)
server-full = ["c-server"]

## Enables Python bindings for the gateway. Requires `python` to be enabled too;
## build with `--features python,python-gateway,full`.
python-gateway = [
    "python",
    "dep:mbus-gateway",
    "dep:mbus-network",
    "mbus-gateway/async",
    "mbus-network/async",
]

## Enables Python bindings (PyO3 / Maturin) for the Modbus client + server stack.
## Requires the `full` feature set; build with `--features python,full`.
python = [
    "dep:pyo3",
    "dep:pyo3-async-runtimes",
    "dep:tokio",
    "dep:mbus-client-async",
    "dep:mbus-server-async",
    "coils",
    "registers",
    "discrete-inputs",
    "fifo",
    "file-record",
    "diagnostics",
]

## Enables native Go (cgo) bindings for the Modbus client/server/gateway stack.
##
## Mirrors the `dotnet` feature: builds the cdylib + staticlib with the same
## `mbus-client-async` / `mbus-server-async` / `mbus-gateway` underpinnings,
## but exports symbols with the `mbus_go_*` prefix so the Go binding can
## evolve independently of the .NET binding. Build with:
##
##     cargo build --release -p mbus-ffi --features go,full
go = [
    "dep:tokio",
    "dep:mbus-client-async",
    "dep:mbus-server-async",
    "dep:mbus-gateway",
    "dep:mbus-network",
    "coils",
    "registers",
    "discrete-inputs",
    "fifo",
    "diagnostics",
    "mbus-client-async/serial-rtu",
    "mbus-client-async/serial-ascii",
    "mbus-gateway/async",
    "mbus-network/async",
]
## Enables traffic notification callbacks on the Go server (mbus-server-async `traffic` feature).
go-traffic = ["go", "mbus-server-async/traffic", "mbus-client-async/traffic"]

## Enables Node.js bindings (napi-rs) for the Modbus client/server/gateway stack.
##
## Build with `cargo build --release -p mbus-ffi --features nodejs,full`.
## The npm package resides in `mbus-ffi/nodejs/` and uses `napi build` to
## produce the native addon.
nodejs = [
    "dep:napi",
    "dep:napi-derive",
    "dep:tokio",
    "dep:mbus-client-async",
    "dep:mbus-server-async",
    "dep:mbus-gateway",
    "dep:mbus-network",
    "coils",
    "registers",
    "discrete-inputs",
    "fifo",
    "file-record",
    "diagnostics",
    "mbus-client-async/serial-rtu",
    "mbus-client-async/serial-ascii",
    "mbus-gateway/async",
    "mbus-network/async",
]
## Enables traffic notification callbacks on the Node.js server/client.
nodejs-traffic = ["nodejs", "mbus-server-async/traffic", "mbus-client-async/traffic"]

## Enables native .NET (C#) P/Invoke bindings for the Modbus client stack.
## Generates a separate `modbus_rs_dotnet.h` header and exposes async request
## functions intended to be wrapped by the managed `ModbusRs` C# project under
## `mbus-ffi/dotnet/`. Build with `--features dotnet,full`.
dotnet = [
    "dep:tokio",
    "dep:mbus-client-async",
    "dep:mbus-server-async",
    "dep:mbus-gateway",
    "dep:mbus-network",
    "coils",
    "registers",
    "discrete-inputs",
    "fifo",
    "diagnostics",
    "mbus-client-async/serial-rtu",
    "mbus-client-async/serial-ascii",
    "mbus-gateway/async",
    "mbus-network/async",
]

[dependencies]
mbus-core = { workspace = true }
mbus-client = { workspace = true }
mbus-server = { workspace = true, optional = true }
mbus-gateway = { workspace = true, optional = true }
mbus-network = { workspace = true, optional = true }
heapless = { workspace = true }

## Python binding deps — only pulled in when `python` feature is enabled.
pyo3 = { version = "0.28.3", features = ["extension-module"], optional = true }
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
mbus-client-async = { version = "0.8.0", path = "../mbus-client-async", features = ["network-tcp", "serial-rtu", "serial-ascii", "coils", "registers", "discrete-inputs", "fifo", "file-record", "diagnostics"], optional = true }
mbus-server-async = { version = "0.8.0", path = "../mbus-server-async", features = ["server-tcp", "server-serial", "coils", "registers", "discrete-inputs", "fifo", "file-record", "diagnostics"], optional = true }

## Node.js binding deps — only pulled in when `nodejs` feature is enabled.
napi = { version = "2.16", default-features = false, features = ["napi6", "tokio_rt", "async"], optional = true }
napi-derive = { version = "2.16", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
## mbus-network is needed for WasmWsTransport (re-exported when `wasm` feature is on)
mbus-network = { workspace = true }
## mbus-serial provides WasmSerialTransport for browser Web Serial integration.
mbus-serial = { workspace = true }

# WASM-only dependencies — not pulled in for native builds.
# Note: web-sys is pulled in transitively through mbus-network/wasm.
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }

[build-dependencies]
cbindgen = { version = "0.29" }
mbus-codegen = { workspace = true }
napi-build = { version = "2.1" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# No native-only deps needed; this section exists as an explicit marker.

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
## In-process AsyncTcpServer used by the .NET binding integration test.
mbus-async = { version = "0.8.0", path = "../mbus-async", features = ["server-tcp", "registers"] }
anyhow = "1"

[[example]]
name = "dotnet_test_server"
required-features = ["registers"]
